--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.0",
-    "zustand": "^4.5.0",
-    "date-fns": "^3.3.1"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -26,7 +29,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
+    "jsdom": "^28.0.0",
+    "vite": "^5.1.0",
+    "vitest": "^4.0.18"
   },
   "engines": {
     "node": ">=18.0.0"
