--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,6 @@ name: Deploy
         required: false
         default: false
         type: boolean
-      build_airgap:
-        description: 'Build airgap package'
-        required: false
-        default: false
-        type: boolean
-
-env:
-  GOWORK: 'off'
 
 concurrency:
   group: deploy-${{ github.ref }}
@@ -99,7 +91,7 @@ jobs:
       url: https://splunk.jclee.me
     needs: [deploy-dev]
     if: |
-      always() && (
+      needs.deploy-dev.result == 'success' && (
         (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod') ||
         (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
       )
@@ -124,115 +116,11 @@ jobs:
   # STAGE: release
   # ============================================================
 
-  release-changelog:
-    name: Generate Changelog
-    runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'push' && (
-        startsWith(github.ref, 'refs/tags/v') ||
-        github.ref == 'refs/heads/master' ||
-        github.ref == 'refs/heads/main'
-      )
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install git-cliff
-        run: |
-          curl -sSfL https://github.com/orhun/git-cliff/releases/download/v2.4.0/git-cliff-2.4.0-x86_64-unknown-linux-musl.tar.gz | tar xz
-          sudo mv git-cliff-*/git-cliff /usr/local/bin/
-
-      - name: Generate changelog
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            git-cliff --config cliff.toml --latest --strip header > RELEASE_NOTES.md
-            echo "Release notes for ${{ github.ref_name }}:"
-            cat RELEASE_NOTES.md
-          else
-            git-cliff --config cliff.toml --unreleased --strip header > CHANGELOG_PREVIEW.md
-            echo "Changelog preview (unreleased):"
-            cat CHANGELOG_PREVIEW.md
-          fi
-
-      - name: Upload changelog artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: changelog
-          path: |
-            RELEASE_NOTES.md
-            CHANGELOG_PREVIEW.md
-          retention-days: 7
-          if-no-files-found: ignore
-
-      - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v2
-        with:
-          body_path: RELEASE_NOTES.md
-          draft: false
-          prerelease: ${{ contains(github.ref, '-') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# NOTE: release-changelog job removed — cliff.toml does not exist in this repo
+# TODO: Add cliff.toml config and re-enable when changelog generation is needed
 
   # ============================================================
   # STAGE: package
   # ============================================================
 
-  package-airgap:
-    name: Build Airgap Package
-    runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.build_airgap == 'true'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22'
-          cache: true
-          cache-dependency-path: go/go.sum
-
-      - name: Configure git
-        run: |
-          git config user.email "ci@jclee.me"
-          git config user.name "GitHub Actions"
-
-      - name: Build splunk-cli
-        run: |
-          mkdir -p releases/bin
-          cd go/cmd/splunk-cli
-          go build -mod=vendor -o ../../../releases/bin/splunk-cli .
-        env:
-          CGO_ENABLED: '0'
-          GOWORK: 'off'
-
-      - name: Build airgap package
-        run: |
-          cd go
-          ../releases/bin/splunk-cli build
-
-      - name: Sync airgap artifacts
-        run: |
-          chmod +x ./scripts/auto-sync-airgap.sh
-          ./scripts/auto-sync-airgap.sh
-        continue-on-error: true
-
-      - name: Upload airgap package
-        uses: actions/upload-artifact@v4
-        with:
-          name: airgap-package-${{ github.sha }}
-          path: releases/
-          retention-days: 30
-
-      - name: Upload to release
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            releases/*.tar.gz
-            releases/*.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# NOTE: package-airgap job removed — go/ directory does not exist in this repo
